<resources>
    <string name="app_name">MP6</string>
    <string name="scores">Scores</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="right_or_wrong">Right or Wrong</string>
    <string name="current_score">Current Score :</string>
    <string name="invisible_value">Invisible Value</string>
    <string name="todo">TODO</string>
    <string name="logo_of_the_game">Logo of the game</string>
    <string name="main_menu">main menu</string>
    <string name="gray_bar_on_top">Gray Bar On top</string>
    <string name="value">value</string>
    <string name="score_0">Score: 0</string>
    <string name="main_menu2">MAIN MENU</string>
    <string name="lower">LOWER</string>
    <string name="play">PLAY</string>
    <string name="higher">HIGHER</string>
    <string name="description">description</string>
    <string name="guesses_between_1_100">Guesses between 1-100</string>
    <string name="_2">2</string>
    <string name="start">Start</string>
    <string name="_100">100</string>
</resources>
